@@ -1,4 +1,4 @@
-/* $Id: conf.c,v 1.33 2005/03/19 07:38:53 manu Exp $ */
+/* $Id: conf.c,v 1.34 2005/11/30 23:32:12 manu Exp $ */
 
 /*
  * Copyright (c) 2004 Emmanuel Dreyfus
@@ -34,7 +34,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID
-__RCSID("$Id: conf.c,v 1.33 2005/03/19 07:38:53 manu Exp $");
+__RCSID("$Id: conf.c,v 1.34 2005/11/30 23:32:12 manu Exp $");
 #endif
 #endif
 
@@ -77,6 +77,7 @@ char c_socket[PATHLEN + 1];
 char c_user[PATHLEN + 1];
 char c_syncaddr[IPADDRSTRLEN + 1];
 char c_syncport[NUMLEN + 1];
+char c_dracdb[PATHLEN + 1];
 
 char *conffile = CONFFILE;
 struct timeval conffile_modified;
@@ -293,6 +294,8 @@ conf_defaults(c)
 	c->c_dumpfreq = DUMPFREQ;
 	c->c_timeout = TIMEOUT;
 	c->c_extendedregex = 0;
+	c->c_dracdb = DRACDB;
+	c->c_nodrac = 0;
 
 	return;
 }
