@@ -1,7 +1,7 @@
 #
 # Greylisting config file
 #
-# $Id: greylist.conf,v 1.30 2005/06/09 20:28:43 manu Exp $
+# $Id: greylist.conf,v 1.31 2005/11/30 23:32:13 manu Exp $
 #
 
 # Uncomment this to enable debug output.
@@ -130,6 +130,13 @@ acl whitelist addr 127.0.0.0/8
 # this to greylist them regardless of SPF compliance.
 # May be overridden by the "-S" command line argument.
 #nospf
+
+# If milter-greylist was built with DRAC support, 
+# then DRAC DB location can be specified here
+#drac db "/usr/local/etc/drac.db"
+
+# Uncomment this to disable DRAC
+#nodrac
 
 # Uncomment if you want milter-greylist to remain
 # in the foreground (no daemon).
