@@ -1,5 +1,5 @@
 .\"
-.\" $Id: milter-greylist.8,v 1.37 2005/06/05 21:59:02 manu Exp $
+.\" $Id: milter-greylist.8,v 1.38 2005/11/30 23:32:13 manu Exp $
 .\"
 .\" Copyright (c) 2004 Emmanuel Dreyfus
 .\" All rights reserved.
@@ -302,6 +302,7 @@ Gary Aitkeno,
 Joel Bertrand,
 Moritz Both,
 Attila Bruncsak,
+Pavel Cahyna,
 Remy Card,
 Alexandre Cherif, 
 Eugene Crosser,
@@ -311,6 +312,7 @@ Klas Heggemann,
 Mattieu Herrb,
 Dan Hollis,
 Per Holm,
+Romain Kang,
 Matt Kettler,
 Petr Kristof,
 Stephane Lentz,
@@ -318,6 +320,7 @@ Ivan F. Martinez,
 Martin Paul,
 Fredrik Pettai,
 Christian Pelissier,
+Alexey Popov,
 Matthias Scheler, 
 Wolfgang Solfrank, 
 Hajimu Umemoto,
