@@ -1,4 +1,4 @@
-# $Id: milter-greylist.spec,v 1.27 2005/10/21 12:30:49 manu Exp $
+# $Id: milter-greylist.spec,v 1.28 2005/11/30 23:32:13 manu Exp $
 # Contributed by Ivan F. Martinez
 %define ver 2.0.2
 %define rel 1
